# test_rhai_embedded

./: Cargo.toml
src/: main.rs
